--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; background: hsl(192, 100%, 9%); color: white; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -152,12 +152,12 @@
           <a href="#" class="social-media__link"><i class="fab fa-twitter-square"></i></a>
         </div>
       </div>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-      </p>
-      
     </footer>
   </div>
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="https://github.com/daudi13">Frontend
+      Mentor</a>.
+    Coded by <a href="https://github.com/daudi13">David Ouma</a>.
+  </p>
 </body>
 </html>
